Fix issue of address not wrapping (break-word) (#2)
* Attempt to fix overflow issue

* Attempt to fix overflow issue 2

* Attempt to fix overflow issue 3

* Attempt to fix overflow issue 4

* Attempt to fix overflow issue 5

* Attempt a

* Attempt a

--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,9 @@ body,
 .body > div:nth-child(odd) {
   background-color: #eee;
 }
+
+.address {
+  overflow-wrap: "break-word";
+  word-wrap: "break-word";
+  flex-wrap: "wrap";
+}
